tests in modification-io run green, with caveat TODO in BlockPrinter